Fix uneven margins on left and right sides

--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -28,8 +28,7 @@ div.title {
 
 div.section {
   border: 1px solid black;
-  margin-right: 10px;
-  margin-bottom: 10px;
+  margin: 0px 10px 10px 10px;
 }
 
 div.title.mars {
